ui/common.css
/* ... */
.icon.icon-point1::after {
  content: "\25CF";
}

.icon.icon-keyboardkey1 {
  background: #fff;
  color: #999;
  padding: 4px 6px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 1px 1px 0 2px #0003;
}

.icon.icon-iconed-bottom1 {
  padding: 4px 6px;
  display: inline-block;
  border-radius: 3px;
  text-align: center;
}
.icon.icon-iconed-bottom1 > i {
  font-style: normal;
  display: block;
  margin: 3px;
  font-size: 2em;
  font-weight: normal;
}

/* Windows */
.window {
  position: absolute;
}

.window.window1 {
  background: #a56;
  box-shadow: 0 0 5px #0006;
  color: #fff;
  font-size: 1em;
  display: none;
}

.window.window1.display {
  display: block;
}

.window.window1::before {
  top: -5px;
  position: absolute;
  display: block;
  content: " ";
  width: 10px;
  height: 10px;
  background: #a56;
  transform: rotate(45deg);
}

.window.window1 .window-frame {
  width: 100%;
  overflow: auto;
  position: relative;
}

.window.window1 .window-title {
  font-size: 0.9em;
  font-weight: bold;
  text-transform: uppercase;
  color: #e9a;
}

.window.window1 .window-close {
  position: absolute;
  top: 10px;
  right: 10px;
  border-color: #844;
  cursor: pointer;
}
.window.window1 .window-close::after {
  border-color: #844;
}

/* Form1 */
.form1 {
}

.form1 > fieldset,
.form1 > fieldset * {
  padding: 0;
  margin: 0;
  color: #fff;
  outline: none;
  border: 0;
  font-size: 1em;
}

.form1 > fieldset .field {
  color: #ccc;
  display: block;
  width: 100%;
  overflow: auto;
}

.form1 > fieldset .field.horizontal {
  width: auto;
  float: left;
  margin-right: 10px;
}

.form1 > fieldset .items {
  width: 100%;
  overflow: auto;
}

.form1 > fieldset .field.horizontal.item {
  margin-top: 3px;
  margin-bottom: 3px;
}

.form1 > fieldset .field.horizontal:last-child {
  margin-right: 0;
}

.form1 > fieldset .field,
.form1 > fieldset .field input,
.form1 > fieldset .field select,
.form1 > fieldset .field textarea,
.form1 > fieldset .field button {
  vertical-align: middle;
  font-size: 1.05em;
}

.form1 > fieldset .field {
  font-size: 0.95em;
  margin-bottom: 10px;
}

.form1 > fieldset .field > .textinfo {
  color: #fff;
}

.form1 > fieldset .field > .textinfo > .info {
  padding: 10px;
  margin: 10px 0;
  font-size: 1.1em;
  background: #292929;
  border: 1px solid #444;
  overflow-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word;
}

.form1 > fieldset .field:last-child {
  margin-bottom: 0;
}

.form1 > fieldset .field:last-child {
  margin-bottom: 0;
}

.form1 > fieldset .field > input,
.form1 > fieldset .field > select,
.form1 > fieldset .field > textarea,
.form1 > fieldset .field > button {
  box-sizing: border-box;
  resize: none;
}

.form1 > fieldset .field > input::placeholder {
  color: #666;
}

.form1 > fieldset .field > input:focus::placeholder {
  color: #444;
}

.form1 > fieldset .field > input[type="text"],
.form1 > fieldset .field > input[type="file"],
.form1 > fieldset .field > input[type="email"],
.form1 > fieldset .field > input[type="number"],
.form1 > fieldset .field > input[type="search"],
.form1 > fieldset .field > input[type="tel"],
.form1 > fieldset .field > input[type="url"],
.form1 > fieldset .field > input[type="password"],
.form1 > fieldset .field > select,
.form1 > fieldset .field > textarea {
  width: 100%;
  padding: 10px;
  border: 0;
  background: #2e2e2e;
  margin-top: 5px;
  border-bottom: 2px solid #3e3e3e;
}

.form1 > fieldset .field > textarea {
  min-height: 120px;
}

.form1 > fieldset .field.error > .error {
  margin-top: 5px;
  color: #f55;
}

.form1 > fieldset .field > .message {
  margin-top: 5px;
  color: #999;
}

.form1 > fieldset .field > .message * {
  color: #999;
}

.form1 > fieldset .field > .message > p {
  margin-bottom: 5px;
}

.form1 > fieldset .field > .message > a {
  color: #e9a;
}

.form1 > fieldset .field.highlight > input[type="text"],
.form1 > fieldset .field.highlight > input[type="file"],
.form1 > fieldset .field.highlight > input[type="email"],
.form1 > fieldset .field.highlight > input[type="number"],
.form1 > fieldset .field.highlight > input[type="search"],
.form1 > fieldset .field.highlight > input[type="tel"],
.form1 > fieldset .field.highlight > input[type="url"],
.form1 > fieldset .field.highlight > input[type="password"],
.form1 > fieldset .field.highlight > select,
.form1 > fieldset .field.highlight > textarea {
  background: #666;
  border-bottom: 2px solid #ccc;
}

.form1 > fieldset .field.error > input[type="text"],
.form1 > fieldset .field.error > input[type="file"],
.form1 > fieldset .field.error > input[type="email"],
.form1 > fieldset .field.error > input[type="number"],
.form1 > fieldset .field.error > input[type="search"],
.form1 > fieldset .field.error > input[type="tel"],
.form1 > fieldset .field.error > input[type="url"],
.form1 > fieldset .field.error > input[type="password"],
.form1 > fieldset .field.error > select,
.form1 > fieldset .field.error > textarea {
  background: #483535;
  border-bottom: 2px solid #a83333;
}

.form1 > fieldset .field > input:disabled,
.form1 > fieldset .field > select:disabled,
.form1 > fieldset .field > textarea:disabled,
.form1 > fieldset .field > button:disabled {
  opacity: 0.35;
}

.form1 > fieldset .field > input:disabled:active,
.form1 > fieldset .field > select:disabled:active,
.form1 > fieldset .field > textarea:disabled:active,
.form1 > fieldset .field > button:disabled:active {
  opacity: 0.5;
}

.form1 > fieldset .field > input[type="checkbox"],
.form1 > fieldset .field > input[type="radio"] {
  background: #2e2e2e;
  margin: 1px 3px 1px 1px;
}

.form1 > fieldset .field > input[type="checkbox"]:active,
.form1 > fieldset .field > input[type="radio"]:active,
.form1 > fieldset .field > input[type="checkbox"]:focus,
.form1 > fieldset .field > input[type="radio"]:focus {
  outline: 1px solid #e9a;
}
/* ... */

